--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
 
     <!-- CSS file link -->
     <link rel="stylesheet" href="CSS/main.css">
-    
+
 </head>
 <body>
 
-<h1>Bismillah </h1>
-<h2>Bismillah </h2>
-<h3>Bismillah </h3>
-<h4>Bismillah </h4>
-<h5>Bismillah </h5>
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id totam labore qui dolor iste? Suscipit officiis distinctio illum cum temporibus.</p>
+
+
+<h1>Alhumdulillh</h1>
 
 
 
