--- a/index.html
+++ b/index.html
@@ -9,13 +9,50 @@
     <link rel="stylesheet" href="CSS/main.css">
 
 </head>
-<body>
+<body class="bg-slate-800">
 
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id totam labore qui dolor iste? Suscipit officiis distinctio illum cum temporibus.</p>
+    <nav class="bg-slate-800 shadow-xl">
+        <div class="container mx-auto">
+            <div class="sm:flex justify-between items-center py-3">
+                <div class="text-center">
+                    <a href="#" class="text-white text-xl sm:text-3xl font-bold animate-pulse"> <span class="text-orange-500">S</span>mart Cod<span class="text-orange-500">ers</span> </a>
+                </div>
+
+                <hr class="mt-5 mb-5">
+
+                <ul class="sm:flex text-xl text-center">
+                    <li> <a href="#" class="p-3 text-orange-500 font-bold"> Home </a></li>
+                    <li> <a href="#" class="p-3 text-white hover:text-orange-500 font-bold"> Products </a></li>
+                    <li> <a href="#" class="p-3 text-white hover:text-orange-500 font-bold"> Portfolio </a></li>
+                    <li> <a href="#" class="p-3 text-white hover:text-orange-500 font-bold"> Blogs </a></li>
+                    <li> <a href="#" class="p-3 text-white hover:text-orange-500 font-bold"> Contact </a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    
+    <!-- Header Section -->
+
+  <header>
+    <div class=" container mx-auto border text-orange-600 border-t-0 sm:flex justify-around items-center text-center h-[80vh] px-10 pt-10">
+        <div>
+            <h1 class="text-2xl sm:text-5xl font-bold mb-5 sm:mb-16"> Smart Coders : Learn with <br> Programming </h1>
+
+            <button class="bg-orange-400 px-7 py-3 mb-5 rounded-full text-xl text-white shadow-xl hover:bg-orange-700 font-bold"> Join : NiparKaz Coding Teach <svg class="w-7 inline-block text-white ml-2 animate-ping" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" className="w-6 h-6"><path strokeLinecap="round" strokeLinejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3" /></svg>
+            </button>
+        </div>
+        <div>
+            <img class="animate-pulse" src="images/images18.jpg" alt="">
+        </div>
+    </div>
+  </header>
+
+ 
 
 
-<h1>Alhumdulillh</h1>
 
+
+  
 
 
 
