--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         <div>
             <h1 class="text-2xl sm:text-5xl font-bold mb-5 sm:mb-16"> Smart Coders : Learn with <br> Programming </h1>
 
-            <button class="bg-orange-400 px-7 py-3 mb-5 rounded-full text-xl text-white shadow-xl hover:bg-orange-700 font-bold"> Join : NiparKaz Coding Teach <svg class="w-7 inline-block text-white ml-2 animate-ping" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" className="w-6 h-6"><path strokeLinecap="round" strokeLinejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3" /></svg>
+            <button class="bg-orange-400 px-7 py-3 mb-5 rounded-full text-xl text-white shadow-xl hover:bg-orange-700 font-bold"> Join : NiparKaz Coding Teach <svg class="w-7 inline-block stroke-2 text-white ml-2 animate-ping" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" className="w-6 h-6"><path strokeLinecap="round" strokeLinejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3" /></svg>
             </button>
         </div>
         <div>
-            <img class="animate-pulse" src="images/images18.jpg" alt="">
+            <img class="animate-pulse" src="images/hero-img.png" alt="">
         </div>
     </div>
   </header>
