main section create

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Header Section -->
 
   <header>
-    <div class=" container mx-auto border text-orange-600 border-t-0 sm:flex justify-around items-center text-center h-[80vh] px-10 pt-10">
+    <div class=" container mx-auto text-orange-600 border border-t-0 sm:flex justify-around items-center text-center h-[80vh] px-10 pt-10">
         <div>
             <h1 class="text-2xl sm:text-5xl font-bold mb-5 sm:mb-16"> Smart Coders : Learn with <br> Programming </h1>
 
@@ -46,6 +46,51 @@
         </div>
     </div>
   </header>
+
+  <main class="container mx-auto">
+    <section class="my-24">
+        <h2 class="text-white font-bold text-3xl text-center mb-12"> <span class="text-orange-600 text-5xl">O</span>ur <span class="text-orange-600 text-5xl">Ser</span>vices </h2>
+
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10">
+
+            <div class="bg-indigo-950 p-8 rounded-lg text-center border-4 border-gray-700 hover:border-indigo-800 cursor-pointer">
+                <img class="w-1/2 mx-auto " src="images/frontEnd.png" alt="">
+                <h4 class="text-white text-lg my-5 underline underline-offset-8 "> Front End Development </h4>
+                <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero!</p>
+            </div>
+
+            <div class="bg-indigo-950 p-8 rounded-lg text-center border-4 border-gray-700 hover:border-indigo-800 cursor-pointer">
+                <img class="w-1/2 mx-auto " src="images/frontEnd.png" alt="">
+                <h4 class="text-white text-lg my-5 underline underline-offset-8 "> Front End Development </h4>
+                <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero!</p>
+            </div>
+
+            <div class="bg-indigo-950 p-8 rounded-lg text-center border-4 border-gray-700 hover:border-indigo-800 cursor-pointer">
+                <img class="w-1/2 mx-auto " src="images/frontEnd.png" alt="">
+                <h4 class="text-white text-lg my-5 underline underline-offset-8 "> Front End Development </h4>
+                <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero!</p>
+            </div>
+
+            <div class="bg-indigo-950 p-8 rounded-lg text-center border-4 border-gray-700 hover:border-indigo-800 cursor-pointer">
+                <img class="w-1/2 mx-auto " src="images/frontEnd.png" alt="">
+                <h4 class="text-white text-lg my-5 underline underline-offset-8 "> Front End Development </h4>
+                <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero!</p>
+            </div>
+
+            <div class="bg-indigo-950 p-8 rounded-lg text-center border-4 border-gray-700 hover:border-indigo-800 cursor-pointer">
+                <img class="w-1/2 mx-auto " src="images/frontEnd.png" alt="">
+                <h4 class="text-white text-lg my-5 underline underline-offset-8 "> Front End Development </h4>
+                <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero!</p>
+            </div>
+
+            <div class="bg-indigo-950 p-8 rounded-lg text-center border-4 border-gray-700 hover:border-indigo-800 cursor-pointer">
+                <img class="w-1/2 mx-auto " src="images/frontEnd.png" alt="">
+                <h4 class="text-white text-lg my-5 underline underline-offset-8 "> Front End Development </h4>
+                <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero!</p>
+            </div>
+        </div>
+    </section>
+  </main>
 
  
 
