--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="bg-slate-800">
 
-    <nav class="bg-slate-800 shadow-xl">
+    <nav class="bg-slate-800 shadow-xl sticky top-0 z-10">
         <div class="container mx-auto">
             <div class="sm:flex justify-between items-center py-3">
                 <div class="text-center">
@@ -38,7 +38,7 @@
         <div>
             <h1 class="text-2xl sm:text-5xl font-bold mb-5 sm:mb-16"> Smart Coders : Learn with <br> Programming </h1>
 
-            <button class="bg-orange-400 px-7 py-3 mb-5 rounded-full text-xl text-white shadow-xl hover:bg-orange-700 font-bold"> Join : NiparKaz Coding Teach <svg class="w-7 inline-block stroke-2 text-white ml-2 animate-ping" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" className="w-6 h-6"><path strokeLinecap="round" strokeLinejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3" /></svg>
+            <button class="bg-orange-400 px-7 py-3 mb-5 rounded-full text-xl text-white shadow-xl hover:bg-orange-700 font-bold transition"> Join : NiparKaz Coding Teach <svg class="w-7 inline-block stroke-2 text-white ml-2 animate-ping" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor" className="w-6 h-6"><path strokeLinecap="round" strokeLinejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3" /></svg>
             </button>
         </div>
         <div>
@@ -49,7 +49,7 @@
 
   <main class="container mx-auto">
     <section class="my-24">
-        <h2 class="text-white font-bold text-3xl text-center mb-12"> <span class="text-orange-600 text-5xl">O</span>ur <span class="text-orange-600 text-5xl">Ser</span>vices </h2>
+        <h2 class="text-white font-bold text-3xl text-center mb-12 animate-bounce"> <span class="text-orange-600 text-5xl">O</span>ur <span class="text-orange-600 text-5xl">Ser</span>vices </h2>
 
         <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10">
 
@@ -61,31 +61,31 @@
 
             <div class="bg-indigo-950 p-8 rounded-lg text-center border-4 border-gray-700 hover:border-indigo-800 cursor-pointer">
                 <img class="w-1/2 mx-auto " src="images/frontEnd.png" alt="">
-                <h4 class="text-white text-lg my-5 underline underline-offset-8 "> Front End Development </h4>
+                <h4 class="text-white text-lg my-5 underline underline-offset-8 "> Back End Development </h4>
                 <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero!</p>
             </div>
 
             <div class="bg-indigo-950 p-8 rounded-lg text-center border-4 border-gray-700 hover:border-indigo-800 cursor-pointer">
                 <img class="w-1/2 mx-auto " src="images/frontEnd.png" alt="">
-                <h4 class="text-white text-lg my-5 underline underline-offset-8 "> Front End Development </h4>
+                <h4 class="text-white text-lg my-5 underline underline-offset-8 "> JavaScript Complete Course </h4>
                 <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero!</p>
             </div>
 
             <div class="bg-indigo-950 p-8 rounded-lg text-center border-4 border-gray-700 hover:border-indigo-800 cursor-pointer">
                 <img class="w-1/2 mx-auto " src="images/frontEnd.png" alt="">
-                <h4 class="text-white text-lg my-5 underline underline-offset-8 "> Front End Development </h4>
+                <h4 class="text-white text-lg my-5 underline underline-offset-8 "> Next.js Complete Course </h4>
                 <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero!</p>
             </div>
 
             <div class="bg-indigo-950 p-8 rounded-lg text-center border-4 border-gray-700 hover:border-indigo-800 cursor-pointer">
                 <img class="w-1/2 mx-auto " src="images/frontEnd.png" alt="">
-                <h4 class="text-white text-lg my-5 underline underline-offset-8 "> Front End Development </h4>
+                <h4 class="text-white text-lg my-5 underline underline-offset-8 ">React.js Complete Course </h4>
                 <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero!</p>
             </div>
 
             <div class="bg-indigo-950 p-8 rounded-lg text-center border-4 border-gray-700 hover:border-indigo-800 cursor-pointer">
                 <img class="w-1/2 mx-auto " src="images/frontEnd.png" alt="">
-                <h4 class="text-white text-lg my-5 underline underline-offset-8 "> Front End Development </h4>
+                <h4 class="text-white text-lg my-5 underline underline-offset-8 "> MongoDB For Your Database </h4>
                 <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero!</p>
             </div>
         </div>
