new another section code here

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
     </div>
   </header>
 
+  <!-- Main Section -->
+
   <main class="container mx-auto">
     <section class="my-24">
         <h2 class="text-white font-bold text-3xl text-center mb-12 animate-bounce"> <span class="text-orange-600 text-5xl">O</span>ur <span class="text-orange-600 text-5xl">Ser</span>vices </h2>
@@ -90,11 +92,58 @@
             </div>
         </div>
     </section>
-  </main>
 
- 
+ <!-- Section-2 -->
 
+ <section class="bg-slate-900 mb-24 py-16 md:py-48 grid place-content-center text-center">
+    <div class="md:flex justify-center items-center text-white gap-5 sm:gap-8 md:gap-12 md:gap-x-28">
+            <div class="text-lg sm:text-xl md:text-4xl">
+                <p class="text-yellow-400 font-bold mb-10 animate-bounce">My Clients</p>
+                <h2 class="mb-10"> My Take care of <br> more <span class="underline decoration-orange-500 underline-offset-8">than 500tk</span> <br> Customers </h2>
+            </div>
 
+            <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-5 sm:gap-8 md:gap-12">
+                <div>
+                    <img src="images/shopbybrand-1.png" alt="">
+                    <h3 class="font-bold text-yellow-300"> One Plus </h3>
+                </div>
+                <div>
+                    <img src="images/shopbybrand-2.png" alt="">
+                    <h3 class="font-bold text-yellow-300"> Tencent </h3>
+                </div>
+                <div>
+                    <img src="images/shopbybrand-3.png" alt="">
+                    <h3 class="font-bold text-yellow-300"> Apple </h3>
+                </div>
+                <div>
+                    <img src="images/shopbybrand-4.png" alt="">
+                    <h3 class="font-bold text-yellow-300"> Microsoft</h3>
+                </div>
+                <div>
+                    <img src="images/shopbybrand-5.png" alt="">
+                    <h3 class="font-bold text-yellow-300"> Lenovo </h3>
+                </div>
+                <div>
+                    <img src="images/shopbybrand-6.png" alt="">
+                    <h3 class="font-bold text-yellow-300"> Huawei </h3>
+                </div>
+                <div>
+                    <img src="images/shopbybrand-7.png" alt="">
+                    <h3 class="font-bold text-yellow-300"> Nexus </h3>
+                </div>
+                <div>
+                    <img src="images/shopbybrand-10.png" alt="">
+                    <h3 class="font-bold text-yellow-300"> Tesla </h3>
+                </div>
+                <div>
+                    <img src="images/shopbybrand-11.png" alt="">
+                    <h3 class="font-bold text-yellow-300"> Brave </h3>
+                </div>
+            </div>
+    </div>
+ </section>
+
+</main>
 
 
   
