--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
         </div>
     </section>
 
- <!-- Section-2 -->
+ <!-- Section-02 -->
 
  <section class="bg-slate-900 mb-24 py-16 md:py-48 grid place-content-center text-center">
     <div class="md:flex justify-center items-center text-white gap-5 sm:gap-8 md:gap-12 md:gap-x-28">
-            <div class="text-lg sm:text-xl md:text-4xl">
+            <div class="text-lg sm:text-2xl md:text-4xl">
                 <p class="text-yellow-400 font-bold mb-10 animate-bounce">My Clients</p>
                 <h2 class="mb-10"> My Take care of <br> more <span class="underline decoration-orange-500 underline-offset-8">than 500tk</span> <br> Customers </h2>
             </div>
@@ -142,6 +142,30 @@
             </div>
     </div>
  </section>
+
+ <!-- Section-03 -->
+
+<section class="bg-slate-900 py-16 sm:py-24">
+    <div>
+        <h3 class="text-center text-2xl sm:text-5xl text-yellow-500 font-bold animate-pulse mb-10"> Ask a Question </h3>
+
+        <form>
+            <input class="block mx-auto w-5/6 sm:w-1/2 h-12 border-2 border-orange-800 rounded placeholder:italic placeholder:text-orange-800 px-5 mb-10" type="email" placeholder="Your E-mail">
+
+            <textarea class="block mx-auto w-5/6 sm:w-1/2 h-52 border-2 border-orange-700 placeholder:italic placeholder:text-orange-800 px-5 py-5 mb-10" placeholder="Your Question"></textarea>
+
+            <button class="block mx-auto bg-green-800 px-10 py-3 font-bold text-yellow-400 text-xl rounded hover:bg-yellow-600 hover:text-red-600 transition">Send Now</button>
+        </form>
+    </div>
+</section>
+
+
+
+
+
+
+
+
 
 </main>
 
