--- a/index.html
+++ b/index.html
@@ -159,6 +159,61 @@
     </div>
 </section>
 
+<!-- Section-04 -->
+
+<section class="bg-slate-700 my-16 sm:my-20 py-12 sm:py-24">
+    <div class="text-white grid md:grid-cols-2 lg:grid-cols-3 gap-10 sm:gap-16 md:gap-20 justify-center items-center">
+        <div class="border p-10 ">
+            <h5>Basic Plane</h5>
+            <h2> $<span class="text-xl sm:text-2xl md:text-5xl font-bold">19.00</span> /month </h2>
+            <hr class="my-10">
+            <ul class="list-disc list-inside leading-10 text-xl">
+                <li> 5000 User Activities </li>
+                <li> Unlimited Access </li>
+                <li> No Hidden Charge </li>
+                <li> 03 Time Updates </li>
+                <li> Figma Source File </li>
+                <li> Many More Facilities </li>
+            </ul>
+            <button class="bg-orange-500 px-5 py-2 my-5 text-xl font-bold rounded-2xl  hover:bg-green-500 hover:text-black transition block mx-auto">Purchase</button>
+        </div>
+
+        <div>
+            <div class="border p-10 ">
+                <h5>Basic Plane</h5>
+                <h2> $<span class="text-xl sm:text-2xl md:text-5xl font-bold">19.00</span> /month </h2>
+                <hr class="my-10">
+                <ul class="list-disc list-inside leading-10 text-xl">
+                    <li> 5000 User Activities </li>
+                    <li> Unlimited Access </li>
+                    <li> No Hidden Charge </li>
+                    <li> 03 Time Updates </li>
+                    <li> Figma Source File </li>
+                    <li> Many More Facilities </li>
+                </ul>
+                <button class="bg-orange-500 px-5 py-2 my-5 text-xl font-bold rounded-2xl block mx-auto hover:bg-green-500 hover:text-black transition">Purchase</button>
+            </div>
+        </div>
+
+        <div>
+            <div class="border p-10 ">
+                <h5>Basic Plane</h5>
+                <h2> $<span class="text-xl sm:text-2xl md:text-5xl font-bold">19.00</span> /month </h2>
+                <hr class="my-10">
+                <ul class="list-disc list-inside leading-10 text-xl">
+                    <li> 5000 User Activities </li>
+                    <li> Unlimited Access </li>
+                    <li> No Hidden Charge </li>
+                    <li> 03 Time Updates </li>
+                    <li> Figma Source File </li>
+                    <li> Many More Facilities </li>
+                </ul>
+                <button class="bg-orange-500 px-5 py-2 my-5 text-xl font-bold block mx-auto hover:bg-green-500 hover:text-black transition rounded-2xl ">Purchase</button>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 
 
