--- a/index.html
+++ b/index.html
@@ -162,7 +162,9 @@
 <!-- Section-04 -->
 
 <section class="bg-slate-700 my-16 sm:my-20 py-12 sm:py-24">
+    <h2 class="text-orange-500 text-xl sm:text-4xl font-bold mb-10 text-center"> <span class="text-white">Pur</span>chase <span class="text-white">Sec</span>tion</h2>
     <div class="text-white grid md:grid-cols-2 lg:grid-cols-3 gap-10 sm:gap-16 md:gap-20 justify-center items-center">
+      
         <div class="border p-10 ">
             <h5>Basic Plane</h5>
             <h2> $<span class="text-xl sm:text-2xl md:text-5xl font-bold">19.00</span> /month </h2>
