footer section code

--- a/index.html
+++ b/index.html
@@ -235,18 +235,67 @@
 
     </div>
     
-
 </section>
-
-
-
-
-
-
-
-
-
 </main>
+
+<!-- Footer Section -->
+
+<footer class="bg-slate-700 my-16 sm:my-20 py-12 sm:py-24">
+    <div class="container mx-auto text-center sm:text-left  ">
+        <div class="sm:flex justify-around items-center text-white">
+            <div>
+                <h1 class="text-xl sm:text-2xl font-bold mb-5">My Account</h1>
+                <ul class="leading-10 mb-5">
+                    <li> <a href="#"> Creator Dashboard </a> </li>
+                    <li> <a href="#"> Wallet </a> </li>
+                    <li> <a href="#"> Create Item </a> </li>
+                    <li> <a href="#"> My Account </a> </li>
+                </ul>
+            </div>
+
+            <div>
+                <h1 class="text-xl sm:text-2xl font-bold mb-5">Web Links</h1>
+                <ul  class="leading-10 mb-5">
+                    <li> <a href="#">Collections </a> </li>
+                    <li> <a href="#"> Item Details </a> </li>
+                    <li> <a href="#"> Rankings </a> </li>
+                    <li> <a href="#"> User Profile </a> </li>
+                </ul>
+            </div>
+
+            <div>
+                <h1 class="text-xl sm:text-2xl font-bold mb-5">Community</h1>
+                <ul  class="leading-10 mb-5">
+                    <li> <a href="#"> Block Category </a> </li>
+                    <li> <a href="#"> Blog Author </a> </li>
+                    <li> <a href="#"> Blog </a> </li>
+                    <li> <a href="#"> Blog Details </a> </li>
+                </ul>
+            </div>
+
+            <div>
+                <h1 class="text-xl sm:text-2xl font-bold mb-5">Contact</h1>
+                <ul class="leading-10 mb-5 ">
+                    <li> <a href="#"> Dhaka P.O 1332 Road, Bangladesh </a> </li>
+                    <li> <a href="#"> BD Author </a> </li>
+                    <li> <a href="#"> author@gmail.com </a> </li>
+                    <li> <a href="#"> Phone no : 25463287 </a> </li>
+                </ul>
+            </div>
+        </div>
+
+        <hr class="my-10">
+
+        <div class="sm:flex justify-between items-center mb-20">
+
+            <p class="text-gray-400"> &copy; Copyright - 2023 - Designed by - <span class="text-orange-500"> NiparKaz Team's </span> </p>
+
+            <p class="text-orange-500"> Privacy Policy || Team of Service </p>
+        </div>
+       
+
+    </div>
+</footer>
 
 
   
